--- a/monolith/src/public/order-history.html
+++ b/monolith/src/public/order-history.html
@@ -19,7 +19,7 @@
         <button type="submit" aria-label="Search">Search</button>
     </form>
     
-    <div role="alert" id="orderDetails"></div>
+    <div role="alert" id="orderDetails" data-testid="order-details"></div>
 
     <script>
         document.getElementById('searchForm').addEventListener('submit', async function(e) {
